--- a/package.json
+++ b/package.json
@@ -28,23 +28,34 @@
         "build-nolog": "next build"
     },
     "dependencies": {
+        "@mysten/dapp-kit": "^0.14.49",
         "@privy-io/react-auth": "^2.0.4",
         "@privy-io/wagmi": "^1.0.2",
+        "@radix-ui/react-accordion": "^1.2.2",
+        "@radix-ui/react-dialog": "^1.1.5",
+        "@radix-ui/react-scroll-area": "^1.2.2",
+        "@radix-ui/react-separator": "^1.1.1",
+        "@radix-ui/react-slot": "^1.1.1",
         "@tanstack/react-query": "^5.64.2",
         "@types/jsonwebtoken": "^9.0.7",
         "@worldcoin/minikit-js": "^1.4.0",
         "@worldcoin/minikit-react": "^1.4.0",
         "axios": "^1.7.8",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "cookies-ts": "^1.0.5",
         "i18next": "^24.0.5",
         "jsonwebtoken": "^9.0.2",
+        "lucide-react": "^0.474.0",
         "next": "14.2.3",
         "pathfinding": "^0.4.18",
         "phaser": "^3.87.0",
         "react": "^18",
         "react-dom": "^18",
-        "swr": "^2.3.0",
         "react-router-dom": "^7.1.3",
+        "swr": "^2.3.0",
+        "tailwind-merge": "^3.0.1",
+        "tailwindcss-animate": "^1.0.7",
         "viem": "2.x",
         "wagmi": "^2.12.33"
     },
@@ -53,9 +64,9 @@
         "@types/pathfinding": "^0.0.9",
         "@types/react": "^18",
         "@types/react-dom": "^18",
-        "tailwindcss": "^3.4.1",
-        "typescript": "^5",
         "autoprefixer": "^10.4.14",
-        "postcss": "^8"
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
     }
 }
