add: main functions

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     },
     "dependencies": {
         "@mysten/dapp-kit": "^0.14.49",
+        "@noble/ed25519": "^2.2.3",
+        "@noble/hashes": "^1.7.1",
         "@privy-io/react-auth": "^2.0.4",
         "@privy-io/wagmi": "^1.0.2",
         "@radix-ui/react-accordion": "^1.2.2",
@@ -41,9 +43,12 @@
         "@worldcoin/minikit-js": "^1.4.0",
         "@worldcoin/minikit-react": "^1.4.0",
         "axios": "^1.7.8",
+        "base64-arraybuffer": "^1.0.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "colyseus.js": "^0.15.26",
         "cookies-ts": "^1.0.5",
+        "ethers": "^6.13.5",
         "i18next": "^24.0.5",
         "jsonwebtoken": "^9.0.2",
         "lucide-react": "^0.474.0",
